2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test.php: Add a test case for PHP files, from
	https://bugs.freedesktop.org/show_bug.cgi?id=16228

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix make check

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Sebastian Dröge
	<slomo@circular-chaos.org> to add *.m3u8 as a glob for m3u files
	(Closes: #16143)

2008-06-11  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add text/rtf as an alias for application/rtf
	(Closes: #16270)

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Update version to 0.17, as we added the
	compact tree suffix

2008-06-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add weight to the DTD (patch by Matthias)
	* shared-mime-info-spec.xml:
	* update-mime-database.c (insert_suffix), (write_suffix_entries),
	(write_suffix_cache): 	Patch by Matthias Clasen
	<mclasen@redhat.com> to implement the compact suffix tree

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix pack200 magic, remove useless gtkrc
	mime-type (doesn't match gtk+ 2.0 config files, and no need for
	mime-types for dot files)

	* Makefile.am: When the test suite fails, relaunch it with more
	verbose so we can fix the error

	* tests/list: MicroDVD subs can now be matched

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml:
	Patch from Matthias Clasen <mclasen@redhat.com> to update the spec
	to match the current implementation

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c:
	Patch from Matthias Clasen <mclasen@redhat.com> to update cache
	version to 1.1 after the recent changes

2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c (get_int_attribute), (get_priority),
	(get_weight), (process_freedesktop_node), (write_out_glob),